# PSE

./: .gitignore  CMakeLists.txt  README.md  TijdTmpl.xls  VaccinDisributor_debug
files/: simulatiecentra.xml  test.txt
inputFiles/: Day-0.txt  Day-1.txt  Day-10.txt  Day-11.txt  Day-12.txt  Day-13.txt  Day-14.txt  Day-15.txt  Day-16.txt  Day-17.txt  Day-18.txt  Day-19.txt  Day-2.txt  Day-3.txt  Day-4.txt  Day-5.txt  Day-6.txt  Day-7.txt  Day-8.txt  Day-9.txt  export.ini  knownTags_spec_10.xml  knownTags_spec_20.xml  simulate_spec_10.xml  simulate_spec_20.xml  simulate_spec_renewal.xml  simulatiecentra.xml  test.txt
plan/: PlanTmpl.xls  TijdTmpl.xls
src/: Dialog.cpp  Dialog.h  Dialog.ui  Dialog.ui.autosave  Exception.cpp  Exception.h  Hub.cpp  Hub.h  Main.cpp  MainTest.cpp  Simulatie.cpp  Simulatie.h  Simulation.cpp  Simulation.h  Utils.cpp  Utils.h  Vaccin.cpp  Vaccin.h  Vaccinatiecentra.cpp  Vaccinatiecentra.h  Vaccinatiecentrum.cpp  Vaccinatiecentrum.h  VaccinationCenter.cpp  VaccinationCenter.h  VdDomainTests.cpp  VdSimulateTests.cpp  VdTests.cpp  VdUtilsTests.cpp  VdXMLReaderTests.cpp  XMLReader.cpp  XMLReader.h  engine  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagebox.cpp  messagebox.h
src/xml/: test.xml
tests 1/inputTests/: happyDays2.xml  happyDaysMultipleHubs.xml  happyDaysOverKillHubs.xml  knownTagsNotComplete1.xml  knownTagsNotComplete2.xml
tests/domainTests/expectedOutput/: expectedcalculateTransport.txt  expectedcalculateVaccin.txt  expectedtransportVaccin.txt  expectedvaccinateCenter.txt
tests/domainTests/generatedOutput/: generatedcalculateVaccin.txt  generatedhubMultipleCenter.txt  generatedvaccinateCenter.txt
tests/inputTests/: alreadyVaccinated.xml  basicXml.xml  brokenHub.xml  containsWrongTagsXml.xml  emptyAddress.xml  emptyCapacityInformation.xml  emptyCenterInformation.xml  emptyCentraInformation.xml  emptyDeliveryInformation.xml  emptyDeliveryTag.xml  emptyIntervalInformation.xml  emptyNameCenter1.xml  emptyNameCenter2.xml  emptyPopulationInformation.xml  emptyTag.xml  emptyTransportInformation.xml  emptyVaccinInformation.xml  intNameCenter.xml  intenseInterval.xml  knownTags.xml  lowTransport.xml  missingElementCenter.xml  missingElementHub.xml  missingElementVaccin.xml  missingMultipleElementsCenter.xml  missingMultipleElementsVaccin.xml  multipleEndTags.xml  negativeCapacityInformation.xml  negativeDeliveryInformation.xml  negativeIntervalInformation.xml  negativePopulationInformation.xml  negativeTransportInformation.xml  noCentra.xml  noCentraHub.xml  noCentraTag.xml  noHub.xml  noVaccinHub.xml  noVaccinTag.xml  nonExistingCenter.xml  nonStringCenter.xml  (+21 more)
tests/outputTests/generatedOutput/: generatedhappyDays.txt  generatedhappyDays_.txt  generatedintenseInterval.txt  generatedintenseInterval_.txt  generatednoHappyDays.txt
